Bug 376379 - Calendar folder name cannot be changed for iCal resources
Summary: Calendar folder name cannot be changed for iCal resources
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-12 02:39 UTC by Boian Berberov
Modified: 2017-02-23 17:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.3
Sentry Crash Report:


Attachments
Korganizer Screenshot (10.82 KB, image/png)
2017-02-12 02:39 UTC, Boian Berberov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Boian Berberov 2017-02-12 02:39:14 UTC
Created attachment 103993 [details]
Korganizer Screenshot

The names of iCal resources cannot be changed.

Steps to reproduce:
1. Open Korganizer
2. Right-click in the Calendar Manager and select "Add Calendar ..."

Chose either one:

3. Select ICal Calendar folder and create
4. Create the resource
5. Right-click on the newly created calendar in the Calendar Manager and select "Folder Properties"
6. Change the calendar name and OK
7. Close Korganizer
8. Open Korganizer
9. Calendar name is not preserved!

3. Select ICal Calendar File and create
4. Create the resource, give it a name.
5. Right-click on the newly created calendar in the Calendar Manager and select "Folder Properties"
6. Change the calendar name and OK
7. Close Korganizer
8. Open Korganizer
9. Calendar name is not preserved!

I use several calendars and it makes it very difficult to create new events and add them to the right calendar.

I just updated openSUSE Tumbleweed and Korganizer says it's version 5.4.1.  openSUSE says akonadi-server is version 16.12.1-2.1
Comment 1 Daniel Vrátil 2017-02-23 17:42:58 UTC
Git commit c551ad2f4dc3a829241aec05eb343de020fee67f by Daniel Vrátil.
Committed on 23/02/2017 at 17:42.
Pushed by dvratil into branch 'Applications/16.12'.

Preserve icaldir resource/collection display name

Match the root collection's display name to AgentBase::name() and
update the agent name when user modifies the root collection's name.
This way it's possible to persistently customize icaldir resource
names instead of having multiple "Calendar Folder" entries in Korganizer.
It also makes the resource visible under the "nice" name in resource
listing, instead of using the agent identifier.
FIXED-IN: 5.4.3

M  +13   -1    resources/icaldir/icaldirresource.cpp
M  +2    -0    resources/icaldir/icaldirresource.h

https://commits.kde.org/kdepim-runtime/c551ad2f4dc3a829241aec05eb343de020fee67f